@@ -76,9 +76,11 @@ before it is, e.g., passed to a corresponding objective function.
 Function must accept a parameter value as the first argument and return a transformed one.
 Default is \code{NULL} which means no transformation.}
 
-\item{requires}{[\code{NULL} | R expression]\cr
+\item{requires}{[\code{NULL} | \code{call} | \code{expression}]\cr
 States requirements on other parameters' values, so that setting
 this parameter only makes sense if its requirements are satisfied (dependent parameter).
+Can be an object created either with \code{expression} or \code{quote},
+the former type is auto-converted into the later.
 Only really useful if the parameter is included in a \code{\link{ParamSet}}.
 Note that if your dependent parameter is a logical Boolean you need to verbosely write
 \code{requires = quote(a == TRUE)} and not \code{requires = quote(a)}.
